--- a/assets/style/base/base.css
+++ b/assets/style/base/base.css
@@ -8,6 +8,7 @@ html {
 body {
   margin: 0;
   color: var(--gray3);
+  background-color: whitesmoke;
 }
 
 h1,
@@ -27,6 +28,12 @@ p {
 a {
   text-decoration: none;
   color: unset;
+  font-family: 'Edu VIC WA NT Beginner', cursive;
+}
+
+button {
+  font-family: 'Edu VIC WA NT Beginner', cursive;
+  font-weight: bold;
 }
 
 
