--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -10,4 +10,7 @@
 
 /* Components */
 @import 'cmps/app-header.css';
-@import 'cmps/user-msg.css';
+@import 'cmps/book-list.css';
+@import 'cmps/home-page.css';
+
+
