--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -10,7 +10,9 @@
 
 /* Components */
 @import 'cmps/app-header.css';
-@import 'cmps/book-list.css';
 @import 'cmps/home-page.css';
+@import 'cmps/book-list.css';
+@import 'cmps/book-filter.css';
+
 
 
