--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -13,6 +13,8 @@
 @import 'cmps/home-page.css';
 @import 'cmps/book-list.css';
 @import 'cmps/book-filter.css';
+@import 'cmps/book-details.css';
+
 
 
 
