--- a/assets/style/cmps/book-filter.css
+++ b/assets/style/cmps/book-filter.css
@@ -1,8 +1,10 @@
 .book-filter {
     display: grid;
+
     padding: 0.5rem;
     background-color: var(--clr2);
     border-radius: 3px;
+    margin-block-start: 5rem;
 }
 
 .book-filter form {
