--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -10,10 +10,13 @@
 
 /* Components */
 @import 'cmps/app-header.css';
+@import 'cmps/footer.css';
 @import 'cmps/home-page.css';
 @import 'cmps/book-list.css';
 @import 'cmps/book-filter.css';
 @import 'cmps/book-details.css';
+@import 'cmps/about-page.css';
+
 
 
 
