--- a/assets/style/base/base.css
+++ b/assets/style/base/base.css
@@ -26,6 +26,11 @@ p {
   font-family: 'Edu VIC WA NT Beginner', cursive;
 }
 
+label {
+  font-family: 'Edu VIC WA NT Beginner', cursive;
+  font-weight: bold;
+}
+
 a {
   text-decoration: none;
   color: unset;
