--- a/assets/style/cmps/book-list.css
+++ b/assets/style/cmps/book-list.css
@@ -78,3 +78,14 @@
     line-height: 1.5rem;
     font-family: 'Edu VIC WA NT Beginner', cursive;
 }
+
+.book-index .add-book {
+    position: relative;
+    left: calc(50% - 2.5rem);
+
+    width: 5rem;
+
+    background-color: var(--clr1);
+    margin: 0;
+    margin-block-start: 1rem;
+}
