--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -17,6 +17,8 @@
 @import 'cmps/book-details.css';
 @import 'cmps/about-page.css';
 @import 'cmps/book-edit.css';
+@import 'cmps/user-msg.css';
+
 
 /* MQ */
 @import 'setup/mq.css';
