--- a/assets/style/cmps/book-details.css
+++ b/assets/style/cmps/book-details.css
@@ -1,6 +1,6 @@
 .book-details {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+   grid-template-columns: 1fr 1fr;
 
     max-width: 400px;
 
@@ -11,17 +11,27 @@
     margin-block-end: 5rem;
 }
 
-.book-details>*:nth-child(5),
-.book-details>*:nth-child(6),
-.book-details>*:nth-child(7),
-.book-details>*:nth-child(8) {
-    align-self: center;
+.book-details>* {
+    grid-column: 1 / span 2;
+
+    justify-self: center;
     font-size: 1rem;
     color: var(--clr1);
 }
 
-.book-details>*:nth-child(7) {
-    font-size: 1.2rem;
+.book-details .price {
+    font-size: 1.4rem;
+    margin-block-end: 0.5rem;
+}
+
+.book-details img {
+    border: 3px solid var(--clr3);
+}
+
+.book-details h1,
+.book-details h2 {
+    justify-self: start;
+    color: black;
 }
 
 .book-details h1 {
@@ -32,4 +42,9 @@
 .book-details h2 {
     margin: 0.3rem;
     font-size: 1.3rem;
+}
+
+.book-details button {
+    background-color: var(--clr2);
+    color: black;
 }
