--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -18,6 +18,10 @@
 @import 'cmps/about-page.css';
 @import 'cmps/book-edit.css';
 @import 'cmps/user-msg.css';
+@import 'cmps/star-rating.css';
+@import 'cmps/review-list.css';
+@import 'cmps/add-review.css';
+
 
 
 /* MQ */
