--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -21,6 +21,10 @@
 @import 'cmps/star-rating.css';
 @import 'cmps/review-list.css';
 @import 'cmps/add-review.css';
+@import 'cmps/dashboard.css';
+@import 'cmps/Chart.css';
+
+
 
 
 
